fixing scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,9 @@
     box-sizing: border-box;
 }
 
-body {background: hsl(212, 45%, 89%);}
+body {
+    background: hsl(212, 45%, 89%);
+}
 
 .container{
     display: flex;
@@ -14,6 +16,7 @@ body {background: hsl(212, 45%, 89%);}
     height: 100vh;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 .card{
@@ -61,4 +64,6 @@ body {background: hsl(212, 45%, 89%);}
     text-align: center;
     color: hsl(218, 44%, 22%);
     font-weight: bold;
+    position: absolute;
+    bottom: 0;
 }
